zeit.cms changes
================

1.8.4 (unreleased)
------------------

1.8.3 (2008-12-12)
------------------

- Sperren von nicht vorhandenen Objekten ist nicht mehr möglich. Das sorgt
  dafür, dass der Hit-Importer nicht mehr frei dreht wenn im Cache noch ein
  Objekt vorhanden ist, welches es aber nicht mehr gibt.

1.8.2 (2008-12-10)
------------------

- Kompatibel mit Python 2.5.
- Product-Config vor den Tests leeren.

1.8.1 (2008-12-08)
------------------

- WYSIWYG-Editor: Knopf zum Einfügen von Audio fügt jetzt ein Audio ein und
  nicht ein Video.

1.8 (2008-12-08)
----------------

- Einfügen aus Word in Kombination mit Firefox 3 verbessert (Bug #4529).
- WYSIWYG-Editor: Knopf zum Einfügen von Audio.
- WYSIWYG-Editor: Javascript-Fehler bei Bild-Einfügen entfernt.

1.7.1 (2008-11-27)
------------------

- Bilder können wieder innerhalb von Absätzen erzeugt werden.

1.7 (2008-11-27)
----------------

- Keyword-Suche sucht jetzt auch in Labels. Damit funktionieren auch Umlaute.
  (Bug #4520)
- Keyword-Vorschlags-Mail mit Betreff (Bug #4281).
- Hits-Spalte lässt sich sortieren (Bug #4487).
- Race-Condition beim Abfragen von Objektrelationen behoben: unter bestimmten
  Umständen wurden alle indizierten Objekte zurückgeliefert.
- Beim Hinzufügen von Bildern wird das dort sinnlose »Wird verwendet von« nicht
  mehr angezeigt.

1.6 (2008-11-26)
----------------

- WYSIWYG-Editor: Formular zum Bild-Bearbeiten vereinfacht (Bug #4170).
- WYSIWYG-Editor: Neues Feld »Format« im Video-Dialog.
- WYSIWYG-Editor: Möglichkeit RAW-Tags zu bearbeiten.
- Bei Bildern und Bildergruppen wird angezeig in welchen Objekten sie als Asset
  verwendet werden (Bug #4037).


1.5 (2008-11-20)
----------------

- Sicherheitsrichtlinien (securitypolicy)  ist aus dem Kern in ein separates
  Paket gewandert. Das sorgt für mehr Flexibilität.
- Permission-Deklaration für den Kalender entfernt (Bug #4511).

1.4 (2008-11-18)
----------------
