@@ -4,6 +4,8 @@ zeit.cms changes
 1.8.4 (unreleased)
 ------------------
 
+- Repository funktioniert auch ohne Product-Config.
+
 1.8.3 (2008-12-12)
 ------------------
 
